# python-coding-exam-template

./: AGENTS.md  README.md  SPEC.md  pyproject.toml
.cursor/rules/: exam-workflow.mdc
.github/workflows/: ci.yml
scripts/: check.sh
solution/: __init__.py
tests/: README.md  conftest.py
tests/integration/: test_integration.py
tests/unit/: test_unit.py
